updates to translation strings in templates: using the new format

--- a/apollo/frontend/templates/403.html
+++ b/apollo/frontend/templates/403.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% trans %}Forbidden Error{% endtrans %}</title>
+    <title>{{ _('Forbidden Error') }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
@@ -13,8 +13,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
-                <legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Off Limits!{% endtrans %}</legend>
-                <p>{% trans %}We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!{% endtrans %}</p>
+                <legend style="border-bottom:0px; margin-bottom:0px;">{{ _('Off Limits!') }}</legend>
+                <p>{{ _("We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!") }}</p>
             </div>
         </div>
 	</div>
