--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -73,7 +73,7 @@
   <div class="col-md-12">
   <table width="100%" class="table table-striped table-bordered">
     <tr class="warning">
-      <td style="text-align:center">{% trans %}No Data Available{% endtrans %}</td>
+      <td style="text-align:center">{{ _('No Data Available') }}</td>
     </tr>
   </table>
   </div>
