--- a/apollo/frontend/templates/frontend/event_selection.html
+++ b/apollo/frontend/templates/frontend/event_selection.html
@@ -7,7 +7,7 @@
 			<div class="form-group">
           {{ form.event(class_='form-control span3 center-block') }}
       </div>
-      <button class="btn btn-warning btn-md" type="submit">{% trans %}Go{% endtrans %}</button>
+      <button class="btn btn-warning btn-md" type="submit">{{ _('Go') }}</button>
 		</form>
 	</div>
 </div>
