--- a/apollo/frontend/templates/frontend/macros/participant_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_edit_form.html
@@ -24,7 +24,7 @@
 {%- endfor -%}
 <div class="form-group">
     <div class="col-sm-offset-4 col-sm-4">
-        <button class="btn btn-primary input-mini" type="submit">{% trans %}Save{% endtrans %}</button>
+        <button class="btn btn-primary input-mini" type="submit">{{ _('Save') }}</button>
     </div>
 </div>
 </form>
