--- a/apollo/frontend/templates/frontend/quality_assurance.html
+++ b/apollo/frontend/templates/frontend/quality_assurance.html
@@ -1,6 +1,6 @@
 {% extends 'frontend/_layout.html' %}
 {% block toolbar %}
-<a class="btn btn-sm btn-primary pull-right" href="javascript:save();"><span class="glyphicon glyphicon-floppy-save"></span> {% trans %}Save{% endtrans %}</a>
+<a class="btn btn-sm btn-primary pull-right" href="javascript:save();"><span class="glyphicon glyphicon-floppy-save"></span> {{ _('Save') }}</a>
 {% endblock %}
 
 {% block stylesheets %}
