--- a/apollo/frontend/templates/frontend/verification_filter.html
+++ b/apollo/frontend/templates/frontend/verification_filter.html
@@ -18,8 +18,8 @@
     </div>
     
     <div class="">
-      <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
-      <a class="btn btn-default form-reset">{% trans "Clear" context "verb" %}</a>
+      <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
+      <a class="btn btn-default form-reset">{{ _('Clear') }}</a>
     </div>
   </form>
 </div>
