--- a/apollo/frontend/templates/500.html
+++ b/apollo/frontend/templates/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% trans %}Server Error{% endtrans %}</title>
+    <title>{{ _('Server Error') }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
@@ -13,8 +13,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
-                <legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Zong! We screwed up :({% endtrans %}</legend>
-                <p>{% trans %}You shouldn't be seeing this page but you are because you're a genius and have found a rare bug in the software. Rest assured, we now know about it and will fix it ASAP!{% endtrans %}</p>
+                <legend style="border-bottom:0px; margin-bottom:0px;">{{ _('Zong! We screwed up :(') }}</legend>
+                <p>{{ _("You shouldn't be seeing this page but you are because you're a genius and have found a rare bug in the software. Rest assured, we now know about it and will fix it ASAP!") }}</p>
             </div>
         </div>
 	</div>
