--- a/apollo/frontend/templates/frontend/checklist_summary.html
+++ b/apollo/frontend/templates/frontend/checklist_summary.html
@@ -7,7 +7,7 @@
 	<div class="col-md-3">
 		<form class="form-inline pull-right" method="GET" accept-charset="utf-8">
 			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }}</div>
-			<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+			<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 		</form>
 	</div>
 </div>
@@ -31,17 +31,17 @@
 							<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
 							<td>&nbsp;</td>
 							{% if stats.type == 'continuous' %}
-							<td bgcolor="#eee">{% trans %}Mean{% endtrans %}</td>
+							<td bgcolor="#eee">{{ _('Mean') }}</td>
 							{% else %}
 							{% for label, unused in stats.options|dictsort(false, 'value') %}
 							<td>{{ _('%(label)s', label=label) }}</td>
 							{% endfor %}
 							{% endif %}
-							<td width="100" bgcolor="#eee">{% trans %}Reported{% endtrans %}</td>
-							<td width="100" bgcolor="#eee">{% trans %}Missing{% endtrans %}</td>
+							<td width="100" bgcolor="#eee">{{ _('Reported') }}</td>
+							<td width="100" bgcolor="#eee">{{ _('Missing') }}</td>
 						</tr>
 						<tr>
-							<td class="text-centered"><strong>{% trans %}All{% endtrans %}</strong></td>
+							<td class="text-centered"><strong>{{ _('All') }}</strong></td>
 							{% if stats.type == 'continuous' %}
 							<td><strong>{{ stats.mean|mean_filter }}</strong></td>
 							{% else %}
@@ -64,7 +64,7 @@
 		{% else %}
 		<table width="100%" class="table table-striped table-bordered">
 			<tr class="warning">
-				<td style="text-align:center">{% trans %}No data available{% endtrans %}</td>
+				<td style="text-align:center">{{ _('No data available') }}</td>
 			</tr>
 		</table>
 		{% endif %}
