--- a/apollo/frontend/templates/frontend/critical_incident_summary.html
+++ b/apollo/frontend/templates/frontend/critical_incident_summary.html
@@ -7,7 +7,7 @@
 	<div class="col-md-7">
 		<form class="form-inline pull-right">
 			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }} {{ filter_form.status(class_='form-control span2 input-sm') }} {{ filter_form.witness(class_='form-control span2 input-sm') }}</div>
-			<button class="btn btn-sm btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans%}Filter{% endtrans %}</button>
+			<button class="btn btn-sm btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 		</form>
 	</div>
 </div>
@@ -21,15 +21,15 @@
 		{% if incidents_summary.top %}
 		<div class="tabbable">
 			<ul class="nav nav-tabs">
-				<li class="active"><a href="#table" data-toggle="tab">{% trans %}Table{% endtrans %}</a></li>
-				<li><a href="#charts" data-toggle="tab">{% trans %}Charts{% endtrans %}</a></li>
+				<li class="active"><a href="#table" data-toggle="tab">{{ _('Table') }}</a></li>
+				<li><a href="#charts" data-toggle="tab">{{ _('Charts') }}</a></li>
 			</ul>
 			<div class="tab-content">
 				<div class="tab-pane active" id="table">
-					<h3>{% trans %}Summary{% endtrans %}</h3>
+					<h3>{{ _('Summary') }}</h3>
 					<table class="table table-bordered table-striped">
 						<tr>
-							<th width="250">{% trans %}Location{% endtrans %}</th>
+							<th width="250">{{ _('Location') }}</th>
 							<th width="100" style="text-align:center">N</th>
 							{% for tag, tag_description, tag_stats in incidents_summary.top %}
 							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=tag) }}">{{ tag }}</a></abbr></th>
@@ -63,7 +63,7 @@
 						{% endfor %}
 						{% endfor %}
 					</table>
-					<h3>{% trans %}Detail{% endtrans %}</h3>
+					<h3>{{ _('Detail') }}</h3>
 					{% if dataframe.count().any() %}
 					{% for group in field_groups %}
 					{% if field_groups[group] %}
@@ -77,17 +77,17 @@
 									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
 									<td>&nbsp;</td>
 									{% if stats.type == 'continuous' %}
-									<td bgcolor="#eee">{% trans %}Mean{% endtrans %}</td>
+									<td bgcolor="#eee">{{ _('Mean') }}</td>
 									{% else %}
 									{% for label, unused in stats.options|dictsort(false, 'value') %}
 									<td>{{ _('%(label)s', label=label) }}</td>
 									{% endfor %}
 									{% endif %}
-									<td width="100" bgcolor="#eee">{% trans %}Reported{% endtrans %}</td>
-									<td width="100" bgcolor="#eee">{% trans %}Missing{% endtrans %}</td>
+									<td width="100" bgcolor="#eee">{{ _('Reported') }}</td>
+									<td width="100" bgcolor="#eee">{{ _('Missing') }}</td>
 								</tr>
 								<tr>
-									<td class="text-centered"><strong>{% trans %}All{% endtrans %}</strong></td>
+									<td class="text-centered"><strong>{{ _('All') }}</strong></td>
 									{% if stats.type == 'continuous' %}
 									<td><strong>{{ stats.mean|mean_filter }}</strong></td>
 									{% else %}
@@ -110,7 +110,7 @@
 				{% else %}
 				<table width="100%" class="table table-striped table-bordered">
 					<tr class="warning">
-						<td style="text-align:center">{% trans %}No data available{% endtrans %}</td>
+						<td style="text-align:center">{{ _('No data available') }}</td>
 					</tr>
 				</table>
 				{% endif %}
