--- a/apollo/frontend/templates/frontend/location_edit.html
+++ b/apollo/frontend/templates/frontend/location_edit.html
@@ -15,7 +15,7 @@
         {% endfor %}
           <tr>
             <td>&nbsp;</td>
-            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn" style="margin-left:0.5em" href="javascript:history.go(-1);">{% trans "Cancel" context "verb" %}</a></td>
+            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn" style="margin-left:0.5em" href="javascript:history.go(-1);">{{ _('Cancel') }}</a></td>
           </tr>
         </tbody>
       </table>
