--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -10,10 +10,10 @@
     {{ filter_form.location(class_='select2-container span4 input-xlarge select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
 </div>
 <div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 </div>
 <div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Reset{% endtrans %}</a>
+	<a class="btn btn-default btn-sm" id="filter_reset">{{ _('Reset') }}</a>
 </div>
 <!--<div class="form-group">
     <input type="checkbox" id="toggle-two" data-onstyle="default" data-offstyle="default"> 
