--- a/apollo/frontend/templates/frontend/macros/form_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/form_edit_form.html
@@ -18,8 +18,8 @@
 {%- endfor -%}
 <div class="form-group">
     <div class="col-sm-offset-4 col-sm-4">
-        <button class="btn btn-primary input-mini" type="submit">{% trans %}Save{% endtrans %}</button>
-        <a href="{{ url_for('forms.list_forms')}}" class="btn btn-default input-mini">{% trans %}Cancel{% endtrans %}</a>
+        <button class="btn btn-primary input-mini" type="submit">{{ _('Save') }}</button>
+        <a href="{{ url_for('forms.list_forms')}}" class="btn btn-default input-mini">{{ _('Cancel') }}</a>
     </div>
 </div>
 </form>
