--- a/apollo/frontend/templates/frontend/macros/locations_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/locations_list_filter.html
@@ -7,10 +7,10 @@
 {{ form.location_type(class_='form-control span3 input-sm') }}
 </div>
 <div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 </div>
 <div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
+	<a class="btn btn-default btn-sm" id="filter_reset">{{ _('Clear') }}</a>
 </div>
 </form>
 {% endmacro %}
