--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -1,13 +1,13 @@
 {% macro render_pager(pager, endpoint, args) %}
 <div class="text-center">
 <ul class="pagination pagination-centered">
-<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First Page{% endtrans %}" href="{% if pager.page == 1 %}javascript:;{% else %}{{ url_for(endpoint, page=1, **args) }}{% endif %}">&laquo;</a></li>
-<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous Page{% endtrans %}" href="{% if not pager.has_prev %}javascript:;{% else %}{{ url_for(endpoint, page=pager.prev_num, **args) }}{% endif %}">&larr;</a></li>
+<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{{ _('First Page') }}" href="{% if pager.page == 1 %}javascript:;{% else %}{{ url_for(endpoint, page=1, **args) }}{% endif %}">&laquo;</a></li>
+<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{{ _('Previous Page') }}" href="{% if not pager.has_prev %}javascript:;{% else %}{{ url_for(endpoint, page=pager.prev_num, **args) }}{% endif %}">&larr;</a></li>
 {% for pg in pager|pagelist %}
 <li {% if pg == pager.page %}class="active"{% endif %}><a href="{% if pg == pager.page %}javascript:;{% else %}{{ url_for(endpoint, page=pg, **args) }}{% endif %}">{{ pg }}</a></li>
 {% endfor %}
-<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next Page{% endtrans %}" href="{% if not pager.has_next %}javascript:;{% else %}{{ url_for(endpoint, page=pager.next_num, **args) }}{% endif %}">&rarr;</a></li>
-<li {% if pager.page == pager.pages or not pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last Page{% endtrans %}" href="{% if pager.page == pager.pages or not pager.pages %}javascript:;{% else %}{{ url_for(endpoint, page=pager.pages, **args) }}{% endif %}">&raquo;</a></li>
+<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{{ _('Next Page') }}" href="{% if not pager.has_next %}javascript:;{% else %}{{ url_for(endpoint, page=pager.next_num, **args) }}{% endif %}">&rarr;</a></li>
+<li {% if pager.page == pager.pages or not pager.pages %}class="disabled"{% endif %}><a title="{{ _('Last Page') }}" href="{% if pager.page == pager.pages or not pager.pages %}javascript:;{% else %}{{ url_for(endpoint, page=pager.pages, **args) }}{% endif %}">&raquo;</a></li>
 </ul>
 </div>
 {%- set start = (pager.page - 1) * pager.per_page + 1 -%}
@@ -20,7 +20,7 @@
 {% if total %}
 <div class="text-center">
 <ul class="pagination pagination-centered" style="margin-top:0px;">
-<li class="disabled"><a>{% trans %}Showing{% endtrans %} <strong>{{ start }}-{{ end }}</strong> {% trans %}of{% endtrans %} <strong>{{ total }}</strong></a></li>
+<li class="disabled"><a>{{ _('Showing') }} <strong>{{ start }}-{{ end }}</strong> {{ _('of') }} <strong>{{ total }}</strong></a></li>
 </ul>
 </div>
 {% endif %}
@@ -37,7 +37,7 @@
 {% if total %}
 <div class="text-center">
 <ul class="pagination pull-right" style="margin:-13px 0 7px 0;">
-<li style="color:#999;">{% trans %}Showing{% endtrans %} <strong>{{ start }}-{{ end }}</strong> {% trans %}of{% endtrans %} <strong>{{ total }}</strong></li>
+<li style="color:#999;">{{ _('Showing') }} <strong>{{ start }}-{{ end }}</strong> {{ _('of') }} <strong>{{ total }}</strong></li>
 </ul>
 </div>
 {% endif %}
