--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -4,15 +4,15 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 id="send_message_label">{% trans %}Send Message{% endtrans %}</h3>
+        <h3 id="send_message_label">{{ _('Send Message') }}</h3>
       </div>
       <div class="modal-body">
         <div class="alert" id="alert" style="display:none">
           <button type="button" class="close" data-dismiss="alert">×</button>
           <span id="alert_message"></span>
         </div>
-        <p><strong>{% trans %}To{% endtrans %}:</strong> {% trans counter=recipients %}{{ counter }} recipient{% pluralize %}{{ counter }} recipients{% endtrans %}.</p>
-        <p><textarea id="message" rows="5" cols="40" style="width:97.5%" class="form-control"></textarea><br /><span id="characters">0 {% trans %}characters{% endtrans %}</span> · <span id="parts">1 {% trans %}message part{% endtrans %}</span></p>
+        <p><strong>{{ _('To') }}:</strong> {% trans counter=recipients %}{{ counter }} recipient{% pluralize %}{{ counter }} recipients{% endtrans %}.</p>
+        <p><textarea id="message" rows="5" cols="40" style="width:97.5%" class="form-control"></textarea><br /><span id="characters">0 {{ _('characters') }}</span> · <span id="parts">1 {{ _('message part') }}</span></p>
       </div>
       <div class="modal-footer">
         <div id="loader" class="ajax_loader" style="visibility: hidden">
@@ -20,8 +20,8 @@
           <div class="ajax_loader_block block_2"></div>
           <div class="ajax_loader_block block_3"></div>
         </div>
-        <button class="btn btn-default btn-modal" data-dismiss="modal" aria-hidden="true">{% trans %}Cancel{% endtrans %}</button>
-        <button class="btn btn-primary btn-modal" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{% trans %}Send{% endtrans %}</button>
+        <button class="btn btn-default btn-modal" data-dismiss="modal" aria-hidden="true">{{ _('Cancel') }}</button>
+        <button class="btn btn-primary btn-modal" id="send" {% if not recipients %}disabled="disabled"{% endif %}>{{ _('Send') }}</button>
       </div>
     </div>
   </div>
@@ -43,8 +43,8 @@
     parts = message.length <= 160 ? 1 : Math.ceil(message.length / 153);
 
     $('#message').val(message);
-    $('#characters').html(message.length > 1 ? message.length + ' ' + "{% trans %}characters{% endtrans %}" : message.length + ' ' + "{% trans %}character{% endtrans %}");
-    $('#parts').html(parts > 1 ? parts + ' ' + "{% trans %}message parts{% endtrans %}" : parts + ' ' + "{% trans %}message part{% endtrans %}");
+    $('#characters').html(message.length > 1 ? message.length + ' ' + "{{ _('characters') }}" : message.length + ' ' + "{{ _('character') }}");
+    $('#parts').html(parts > 1 ? parts + ' ' + "{{ _('message parts') }}" : parts + ' ' + "{{ _('message part') }}");
   });
 
   $("#send").click(function () {
@@ -67,7 +67,7 @@
         // Reset message textbox, display the status and hide the dialog
         $('#message').val("");
         $('#message').trigger('keyup');
-        $('#alert_message').html("<strong>{% trans %}Success{% endtrans %}!</strong> {% trans %}Your message has been sent{% endtrans %}.");
+        $('#alert_message').html("<strong>{{ _('Success') }}!</strong> {{ _('Your message has been sent') }}.");
         $('#alert').removeClass('alert-error');
         $('#alert').addClass('alert-success');
         $('#alert').fadeIn('fast');
@@ -76,7 +76,7 @@
       })
       .fail(function (){
         // Display the fail message if the request failed
-        $('#alert_message').html("<strong>{% trans %}Error{% endtrans %}!</strong> {% trans %}Please try sending again{% endtrans %}.");
+        $('#alert_message').html("<strong>{{ _('Error') }}!</strong> {{ _('Please try sending again') }}.");
         $('#alert').removeClass('alert-success');
         $('#alert').addClass('alert-error');
         $('#alert').fadeIn('fast');
