--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -2,7 +2,7 @@
 {%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
 {% block toolbar %}
 {% if perms.export_messages.can() %}
-<a class="btn btn-sm btn-default pull-right" href="{{ url_for('messages.message_list', export='true', **request.args) }}"><i class="glyphicon glyphicon-export"></i> {% trans %}Export{% endtrans %}</a>
+<a class="btn btn-sm btn-default pull-right" href="{{ url_for('messages.message_list', export='true', **request.args) }}"><i class="glyphicon glyphicon-export"></i> {{ _('Export') }}</a>
 {% endif %}
 {% endblock %}
 {% block content %}
@@ -28,10 +28,10 @@
           </div>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-warning btn-sm"><i class="glyphicon glyphicon-search"></i> {% trans %}Search{% endtrans %}</button>
+          <button type="submit" class="btn btn-warning btn-sm"><i class="glyphicon glyphicon-search"></i> {{ _('Search') }}</button>
         </div>
         <div class="form-group">
-          <a class="btn btn-default form-reset btn-sm">{% trans %}Clear{% endtrans %}</a>
+          <a class="btn btn-default form-reset btn-sm">{{ _('Clear') }}</a>
         </div>
       </form>
     </div>
@@ -48,11 +48,11 @@
     <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
-          <th width="7%">{% trans %}Date{% endtrans %}</th>
-          <th width="7%">{% trans %}Time{% endtrans %}</th>
-          <th width="10%">{% trans %}Mobile{% endtrans %}</th>
-          <th width="7%">{% trans %}Direction{% endtrans %}</th>
-          <th width="60%">{% trans %}Text{% endtrans %}</th>
+          <th width="7%">{{ _('Date') }}</th>
+          <th width="7%">{{ _('Time') }}</th>
+          <th width="10%">{{ _('Mobile') }}</th>
+          <th width="7%">{{ _('Direction') }}</th>
+          <th width="60%">{{ _('Text') }}</th>
         </tr>
       </thead>
       <tbody>
@@ -61,12 +61,12 @@
           <td class="timestamp-date" data-timestamp="{{ message.received|timestamp }}">{{ message.received.strftime('%b %d %Y') }}</td>
           <td class="timestamp-time" data-timestamp="{{ message.received|timestamp }}">{{ message.received.strftime('%I:%M %p') }}</td>
           <td>{% if message.direction == 'IN' %}{{ message.sender }}{% else %}{{ message.recipient }}{% endif %}</td>
-          <td>{% if message.direction == 'IN' %}{% trans %}IN{% endtrans %}{% else %}{% trans %}OUT{% endtrans %}{% endif %}</td>
+          <td>{% if message.direction == 'IN' %}{{ _('IN') }}{% else %}{{ _('OUT') }}{% endif %}</td>
           <td style="word-wrap:break-word">{{ message.text }}</td>
         </tr>
         {% else %}
         <tr class="warning">
-          <td style="text-align:center" colspan="5">{% trans %}No Data Available{% endtrans %}</td>
+          <td style="text-align:center" colspan="5">{{ _('No Data Available') }}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -118,7 +118,7 @@
         },
 
         series : [{
-            name : '{% trans %}Incoming Messages{% endtrans %}',
+            name : '{{ _('Incoming Messages') }}',
             data : data.incoming,
             color: '#ff7f0e',
             type: 'column',
