--- a/apollo/frontend/templates/frontend/participant_performance_detail.html
+++ b/apollo/frontend/templates/frontend/participant_performance_detail.html
@@ -4,48 +4,48 @@
 <div class="col-md-12">
 <div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title">{% trans %}Participant Detail{% endtrans %}</h3>
+<h3 class="panel-title">{{ _('Participant Detail') }}</h3>
 </div>
 {% set accuracy = participant.accurate_message_count|percent_of(participant.message_count, 100.0) %}
 {% set completion = participant.completion_rating|percent_of(1, 100.0) %}
 <table class="table table-bordered">
 <tr>
-<th>{% trans %}Participant{% endtrans %}</th>
+<th>{{ _('Participant') }}</th>
 <td>{{ participant.name }} (<strong>{{ participant.participant_id }}</strong>)</td>
 </tr>
 <tr>
-<th>{% trans %}Phone Numbers{% endtrans %}</th>
+<th>{{ _('Phone Numbers') }}</th>
 <td>{{ participant.phones|join(', ', attribute='number') }}</td>
 </tr>
 <tr>
-<th>{% trans %}Messages Sent{% endtrans %}</th>
+<th>{{ _('Messages Sent') }}</th>
 <td>{{ participant.message_count }}</td>
 </tr>
 <tr>
-<th>{% trans %}Accuracy{% endtrans %}</th>
+<th>{{ _('Accuracy') }}</th>
 <td>{{ accuracy|round|int }}%</td>
 </tr>
 <tr>
-<th>{% trans %}Completion{% endtrans %}</th>
+<th>{{ _('Completion') }}</th>
 <td>{{ completion|round|int }}%</td>
 </tr>
 <tr>
-<th>{% trans %}Rating{% endtrans %}</th>
+<th>{{ _('Rating') }}</th>
 <td><div class="raty" data-score="{{ (accuracy + completion)/200 * 5 }}" data-number="5"></div></td>
 </tr>
 </table>
 </div>
 <div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title">{% trans %}Messages{% endtrans %}</h3>
+<h3 class="panel-title">{{ _('Messages') }}</h3>
 </div>
 <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
 <thead>
 <tr>
-    <th width="10%">{% trans %}Date{% endtrans %}</th>
-    <th width="10%">{% trans %}Time{% endtrans %}</th>
-    <th width="15%">{% trans %}Mobile{% endtrans %}</th>
-    <th width="65%">{% trans %}Text{% endtrans %}</th>
+    <th width="10%">{{ _('Date') }}</th>
+    <th width="10%">{{ _('Time') }}</th>
+    <th width="15%">{{ _('Mobile') }}</th>
+    <th width="65%">{{ _('Text') }}</th>
 </tr>
 </thead>
 <tbody>
@@ -59,7 +59,7 @@
 {% else %}
 <tr class="warning">
     <td class="text-center" colspan="4">
-        {% trans %}No Data Available{% endtrans %}
+        {{ _('No Data Available') }}
     </td>
 </tr>
 {% endfor %}
