--- a/apollo/frontend/templates/frontend/quality_assurance_list.html
+++ b/apollo/frontend/templates/frontend/quality_assurance_list.html
@@ -11,11 +11,11 @@
 		<table class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
-					<th>{% trans %}Quality Assurance Condition{% endtrans %}</th>
-					<th width="80" class="text-right">{% trans %}Flagged{% endtrans %}</th>
-					<th width="80" class="text-right">{% trans %}Verified{% endtrans %}</th>
-					<th width="80" class="text-right">{% trans %}OK{% endtrans %}</th>
-					<th width="80" class="text-right">{% trans %}Missing{% endtrans %}</th>
+					<th>{{ _('Quality Assurance Condition') }}</th>
+					<th width="80" class="text-right">{{ _('Flagged') }}</th>
+					<th width="80" class="text-right">{{ _('Verified') }}</th>
+					<th width="80" class="text-right">{{ _('OK') }}</th>
+					<th width="80" class="text-right">{{ _('Missing') }}</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -29,7 +29,7 @@
 				</tr>
 			{% else %}
 				<tr>
-					<td colspan="5" class="warning text-center">{% trans %}No Data Available{% endtrans %}</td>
+					<td colspan="5" class="warning text-center">{{ _('No Data Available') }}</td>
 				</tr>
 			{% endfor %}
 			</tbody>
