--- a/apollo/frontend/templates/frontend/results.html
+++ b/apollo/frontend/templates/frontend/results.html
@@ -6,7 +6,7 @@
 	<div class="col-md-3">
 		<form class="form-inline pull-right" method="GET" accept-charset="utf-8">
 			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }}</div>
-			<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+			<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 		</form>
 	</div>
 </div>
@@ -32,54 +32,54 @@
 						<th>&nbsp;</th>
 						<th>&nbsp;</th>
 						<th>&nbsp;</th>
-                        <th width="30"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Turnout{%- endtrans -%}</th>
-						<th width="30"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Total Votes{%- endtrans -%}</th>
+                        <th width="30"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ _('Turnout') }}</th>
+						<th width="30"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ _('Total Votes') }}</th>
                         {% if form.invalid_votes_tag -%}
-                        <th width="100"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Rejected Ballots{%- endtrans -%}</th>
+                        <th width="100"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ _('Rejected Ballots') }}</th>
                         {%- endif %}
                         {% if form.blank_votes_tag -%}
-						<th width="100"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Blank Ballots{%- endtrans -%}</th>
+						<th width="100"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ _('Blank Ballots') }}</th>
                         {%- endif %}
-						<th width="30" style="text-align:center">{%- trans -%}Total Valid{%- endtrans -%}</th>
+						<th width="30" style="text-align:center">{{ _('Total Valid') }}</th>
 						{%- for candidate in result_fields -%}
 						<th width="100"{%- if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ candidate.description }}<br />({{ candidate.name }})</th>
 						{%- endfor -%}
 					</tr>
 					<tr>
                         <td>&nbsp;</td>
-						<td class="centered" width="10%"><em>{%- trans -%}Reported{%- endtrans -%}</em></td>
-						<td class="centered" width="10%"><em>{%- trans -%}Missing{%- endtrans -%}</em></td>
-						<td class="centered"><em><abbr title="{%- trans -%}Total Registered{%- endtrans -%}">{%- trans -%}TR{%- endtrans -%}</abbr></em></td>
-                        <td class="centered" width="10%"><em>{%- trans -%}Turnout{%- endtrans -%}</em></td>
+						<td class="centered" width="10%"><em>{{ _('Reported') }}</em></td>
+						<td class="centered" width="10%"><em>{{ _('Missing') }}</em></td>
+						<td class="centered"><em><abbr title="{{ _('Total Registered') }}">{{ _('TR') }}</abbr></em></td>
+                        <td class="centered" width="10%"><em>{{ _('Turnout') }}</em></td>
                         {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 95%%') }}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 99%%') }}</abbr></em></td>
                         {%- endif -%}
-                        <td class="centered" width="10%"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
+                        <td class="centered" width="10%"><em>{{ _('Votes') }}</em></td>
                         {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 95%%') }}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 99%%') }}</abbr></em></td>
                         {%- endif -%}
                         {% if form.invalid_votes_tag -%}
-						<td class="centered"><em><abbr title="{%- trans -%}Rejected Ballots{%- endtrans -%}">{%- trans -%}RB{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Rejected Ballots') }}">{{ _('RB') }}</abbr></em></td>
 						{%- if form.calculate_moe and config.ENABLE_MOE -%}
-						<td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-						<td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 95%%') }}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 99%%') }}</abbr></em></td>
 						{%- endif -%}
                         {%- endif %}
                         {% if form.blank_votes_tag -%}
-                        <td class="centered" width="10%"><em><abbr title="{%- trans -%}Blank Ballots{%- endtrans -%}">{%- trans -%}BB{%- endtrans -%}</abbr></em></td>
+                        <td class="centered" width="10%"><em><abbr title="{{ _('Blank Ballots') }}">{{ _('BB') }}</abbr></em></td>
                         {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-                        <td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 95%%') }}</abbr></em></td>
+                        <td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 99%%') }}</abbr></em></td>
                         {%- endif -%}
                         {%- endif %}
-						<td class="centered"><em><abbr title="{%- trans -%}Total Valid{%- endtrans -%}">{%- trans -%}TV{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Total Valid') }}">{{ _('TV') }}</abbr></em></td>
 						{%- for party in result_descriptions -%}
-						<td class="centered"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
+						<td class="centered"><em>{{ _('Votes') }}</em></td>
 						{%- if form.calculate_moe and config.ENABLE_MOE -%}
-						<td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-						<td class="centered"><em><abbr title="{%- trans -%}Margin of Error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 95%%') }}</abbr></em></td>
+						<td class="centered"><em><abbr title="{{ _('Margin of Error') }}">{{ _('MoE 99%%') }}</abbr></em></td>
 						{%- endif -%}
 						{%- endfor -%}
 					</tr>
@@ -180,7 +180,7 @@
 				</table>
 				{%- else -%}
 				<table width="100%" class="table table-striped table-bordered">
-                    <tr class="warning"><td style="text-align:center">{% trans %}No Data Available{% endtrans %}</td></tr>
+                    <tr class="warning"><td style="text-align:center">{{ _('No Data Available') }}</td></tr>
                 </table>
 				{%- endif -%}
 			</div>
@@ -209,7 +209,7 @@
             enabled : false
         },
         title: {
-            text: "{% trans %}Convergence Chart{% endtrans %}"
+            text: "{{ _('Convergence Chart') }}"
         },
         navigator: {
             height: 30,
