--- a/apollo/frontend/templates/frontend/submission_history.html
+++ b/apollo/frontend/templates/frontend/submission_history.html
@@ -2,7 +2,7 @@
 {% block toolbar %}
 {%- if submission.versions %}
 <div class="btn-group pull-right">
-  <a href class="btn btn-default">{%- trans -%}History{%- endtrans -%}</a>
+  <a href class="btn btn-default">{{ _('History') }}</a>
   <button class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
   <ul class="dropdown-menu" role="menu">
     {% for version in submission.versions -%}
@@ -25,24 +25,24 @@
     <div class="panel-body">
       <div class="list-group">
         <div class="list-group-item">
-          <strong>{% trans %}Participant{% endtrans %}</strong>: {{ submission.contributor.name }} ({{ submission.contributor.phone }}) &mdash; <strong>{{ submission.contributor.participant_id }}</strong>
+          <strong>{{ _('Participant') }}</strong>: {{ submission.contributor.name }} ({{ submission.contributor.phone }}) &mdash; <strong>{{ submission.contributor.participant_id }}</strong>
         </div>
         <div class="list-group-item">
-          <strong>{% trans %}Via{% endtrans %}</strong>: {{ submission_version.channel }}
+          <strong>{{ _('Via') }}</strong>: {{ submission_version.channel }}
         </div>
         <div class="list-group-item">
-          <strong>{% trans %}Edited by{% endtrans %}</strong>: {{ submission_version.identity }}
+          <strong>{{ _('Edited by') }}</strong>: {{ submission_version.identity }}
         </div>
         <div class="list-group-item">
-          <strong>{% trans %}Updated{% endtrans %}</strong>: <span class="timestamp" data-timestamp="{{ submission_version.timestamp|timestamp }}">{{ submission_version.timestamp.strftime('%b %d %Y %I:%M %p') }}</span>
+          <strong>{{ _('Updated') }}</strong>: <span class="timestamp" data-timestamp="{{ submission_version.timestamp|timestamp }}">{{ submission_version.timestamp.strftime('%b %d %Y %I:%M %p') }}</span>
         </div>
       </div>
       <table class="table table-striped">
         <tbody>
           <tr>
             <td colspan="2">&nbsp;</td>
-            <th>{% trans %}Saved{% endtrans %}</th>
-            <th>{% trans %}Current{% endtrans %}</th>
+            <th>{{ _('Saved') }}</th>
+            <th>{{ _('Current') }}</th>
           </tr>
           {% for group in form.groups %}
           <tr>
